--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
             <div class="container">
                 <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="list item-about">
-                    <li class="item"><img src="./images/specialty/img1.jpg" alt="Разметка сайта" width="370" height="294"> <div class="name"><p class="text">Десктопные приложения</p></div></li>
-                    <li class="item"><img src="./images/specialty/img2.jpg" alt="Дизайн страницы для телефона" width="370" height="294"> <div class="name"><p class="text">Мобильные приложения</p></div></li>
-                    <li class="item"><img src="./images/specialty/img3.jpg" alt="Цветовая схема" width="370" height="294"> <div class="name"><p class="text">Дизайнерские решения</p></div> </li>
+                    <li class="item"> <div class="about-overlay"><img src="./images/specialty/img1.jpg" alt="Разметка сайта" width="370" height="294"><div class="about-position"><p class="text-overlay">Десктопные приложения</p></div></div></li>
+                    <li class="item"> <div class="about-overlay"><img src="./images/specialty/img2.jpg" alt="Дизайн страницы для телефона" width="370" height="294"><div class="about-position"><p class="text-overlay">Мобильные приложения</p></div></div></li>
+                    <li class="item"> <div class="about-overlay"><img src="./images/specialty/img3.jpg" alt="Цветовая схема" width="370" height="294"><div class="about-position"><p class="text-overlay">Дизайнерские решения</p></div></div></li>
                 </ul>
             </div>    
         </section>
